<resources>
    <string name="app_name">My Nursery</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_wait">please wait</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nursery">Nursery</string>
    <string name="phone_number">Phone number</string>
    <string name="send_verification_code">send verification code</string>
    <string name="verification_code">verification code</string>
    <string name="verify">verify</string>
    <string name="undefined_error_message">error occurred please try again later</string>
    <string name="favourites">favourites</string>
    <string name="profile">profile</string>
    <string name="add_photo">Add Photo</string>
    <string name="title_activity_location_picker">LocationPicker</string>
    <string name="action_settings">Settings</string>
    <string name="nursery_location">nursery location</string>
    <string name="nursery_location_snippit">nursery location</string>
    <string name="pick_place">pick place</string>
    <string name="option_get_place">get place</string>
    <string name="confirm">Confirm</string>
    <string name="marker_error_message">please choose location first</string>
    <string name="search_for_nursery">search for nursery</string>
    <string name="title_activity_nursery_search_results">NurserySearchResults</string>
    <string name="title_activity_nursery_list">NurseryListActivity</string>
    <string name="filter">Filter</string>
    <string name="description">Description</string>
    <string name="gps_prompt">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="location_title_prompt">Location is not enabled</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="special_needs">Special Needs</string>
    <string name="government">government</string>
    <string name="city">city</string>
    <string name="block">Block</string>
    <string name="age">Age</string>
    <string name="add_comment_field">Write Comment …</string>
    <string name="add_comment_btn">Add Comment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="working_time">Working time</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="apply">Apply</string>
    <string name="snapchat">Snapchat</string>
    <string name="instagram">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="error_occurred_will_uploading">Error occurred will uploading</string>
    <string name="required"> is Required</string>
    <string name="name">Name</string>
    <string name="district">District</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="phone1">Phone 1</string>
    <string name="phone2">Phone 2</string>
    <string name="facebook">Facebook</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="min_age">Min Age</string>
    <string name="max_age">Max Age</string>
    <string name="swimming">Swimming</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="bus">Bus</string>
    <string name="additional_activities">Additional Activities</string>
    <string name="fees">Fees</string>
    <string name="save">Save</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="code_sent">Code sent by sms</string>
    <string name="invalid_phone_number_or_code">invalid phone number or code</string>
    <string name="km">KM</string>
    <string name="add_nursery">Add Nursery</string>
    <string name="add_nursery_loading">Please wait , uploading ...</string>
    <string name="username">User Name</string>
    <string name="address">Address</string>
    <string name="one_image">One image at least</string>
    <string name="nursery_owner">Nursery Owner</string>
    <string name="country">Country</string>
    <string name="avenu1">Avenue</string>
    <string name="avenu2">Avenue</string>
    <string name="logout">Logout</string>
    <string name="no_sponsored_nurseries">No sponsored nurseries in this area</string>
    <string-array name="lang_array">
    <item>arabic</item>
    <item>english</item>
    </string-array>

</resources>
