<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/default_spacing"
    android:padding="@dimen/default_spacing"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kareem.mynursery.nursery.FilterActivity"
    tools:showIn="@layout/activity_filter">

    <LinearLayout
        style="@style/filterItems" android:orientation="horizontal">
        <EditText
            style="@style/filterItems"
            android:inputType=""
            android:editable="false"
            android:focusable="false"
            android:clickable="false"
            android:hint="@string/special_needs" />

        <Switch
            android:id="@+id/special_needs_switch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="@dimen/space_extra"
            android:paddingRight="@dimen/space_extra"
            />

    </LinearLayout>



    <EditText
        android:id="@+id/government"
        style="@style/filterItems"
        android:hint="@string/government" />

    <EditText
        android:id="@+id/city"
        style="@style/filterItems"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/block"
        style="@style/filterItems"
        android:hint="@string/block" />


    <EditText
        android:id="@+id/neighborhood"
        style="@style/filterItems"
        android:hint="@string/neighborhood" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/colorPrimary"
        android:padding="@dimen/default_spacing" android:textSize="@dimen/text_title_size" />
    <LinearLayout
        style="@style/filterItems" android:orientation="horizontal">
        <EditText
            android:id="@+id/age_from"
            style="@style/filterItems"
            android:hint="@string/from"
            android:textColorHint="@color/textPrimary"
            />

        <EditText
            style="@style/filterItems"
            android:id="@+id/age_to"
            android:hint="@string/to"
            android:textColorHint="@color/textPrimary"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/working_time"
        android:textColor="@color/colorPrimary"
        android:padding="@dimen/default_spacing" android:textSize="@dimen/text_title_size" />
    <LinearLayout
        style="@style/filterItems" android:orientation="horizontal">
        <EditText
            style="@style/filterItems"
            android:hint="@string/from"
            android:textColorHint="@color/textPrimary"
            android:id="@+id/time_from"
            />

        <EditText
            style="@style/filterItems"
            android:hint="@string/to"
            android:textColorHint="@color/textPrimary"
            android:id="@+id/time_to"
            />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="100dp"/>

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:text="@string/apply"
    android:textColor="@color/textSecondary"
    android:id="@+id/apply_button"/>
</LinearLayout>
