<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kareem.mynursery.authentication.LoginActivity"
    tools:showIn="@layout/activity_login">
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:id="@+id/phone_number"
        />
        <LinearLayout android:orientation="vertical" android:visibility="gone" android:id="@+id/verification_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/verification_key" android:inputType="number"
                android:hint="@string/verification_code"
                />
            <Button
                android:layout_width="match_parent" android:id="@+id/verify"
                android:layout_height="wrap_content" android:text="@string/verify" />
        </LinearLayout>
    <Button
        android:layout_width="match_parent" android:id="@+id/send_verification"
        android:layout_height="wrap_content" android:text="@string/send_verification_code" />
    </LinearLayout>
</RelativeLayout>
